discussion/kv_engine/150867/150867_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

CBD-3928: Update existing license headers to BSL (engines)

Change-Id: I6731e1de0092cea2c2f004329bd792b98ada359b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-04-12 16:13:07.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-04-12 16:45:26.000000000
Message: 
Patch Set 2: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-12 17:43:40.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34898/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34898/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8298/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:14:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:30:31: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:30:53: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:30:53: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:82:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:14:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:32:22: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalWin32(ThreadLocalDestructor dtor = nullptr) {
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:32:44: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    ThreadLocalWin32(ThreadLocalDestructor dtor = nullptr) {
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:32:44: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:33:20: error: use of undeclared identifier "TlsAlloc" [clang-diagnostic-error]
        tlsIndex = TlsAlloc();
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:34:25: error: use of undeclared identifier "TLS_OUT_OF_INDEXES" [clang-diagnostic-error]
        if (tlsIndex == TLS_OUT_OF_INDEXES) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:35:13: error: unknown type name "DWORD" [clang-diagnostic-error]
            DWORD err = GetLastError();
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:35:25: error: use of undeclared identifier "GetLastError" [clang-diagnostic-error]
            DWORD err = GetLastError();
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:52:13: error: unknown type name "DWORD" [clang-diagnostic-error]
            DWORD err = GetLastError();
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:52:25: error: use of undeclared identifier "GetLastError" [clang-diagnostic-error]
            DWORD err = GetLastError();
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:73:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_win32.h:74:5: error: unknown type name "DWORD" [clang-diagnostic-error]
    DWORD tlsIndex;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8298/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8298/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29952/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6843/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8886/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9817/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10185/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9954/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17733/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-04-12 17:48:58.000000000
Message: 
Patch Set 2: Verified+1

Override failing CV - not related to license change
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-04-12 17:49:02.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
